# cbflib

./: .symlinks  .undosymlinks  CBFlib.html  CBFlib.txt  CBFlib_NOTICES.txt  CMakeLists.txt  Java.txt  Makefile  Makefile_AIX  Makefile_DIALS  Makefile_IRIX_gcc  Makefile_LINUX  Makefile_LINUX_64  Makefile_LINUX_DMALLOC  Makefile_LINUX_gcc42  Makefile_LINUX_gcc42_DMALLOC  Makefile_LINUX_old  Makefile_MINGW  Makefile_MINGW_old  Makefile_MSYS  Makefile_MSYS2  Makefile_MSYS2_new  Makefile_MSYS2_old  Makefile_MSYS2_save  Makefile_OSX  Makefile_OSX_gcc42  Makefile_OSX_gcc42_DMALLOC  Makefile_OSX_old  Makefile_old  README  README.html  cbf.c  cbf.stx.y  cbf_alloc.h  cbf_binary.c  cbf_context.h  cbf_definition_rev.html  cbf_file.h  cbf_lex.c  cbf_lex.h  (+27 more)
CBFlib/: .symlinks  .undosymlinks  CBFlib.txt  CBFlib_NOTICES.html  CMakeLists.txt  MANIFEST  Makefile  Makefile_AIX  Makefile_IRIX_gcc  Makefile_LINUX  Makefile_LINUX_64  Makefile_LINUX_DMALLOC  Makefile_LINUX_gcc42  Makefile_LINUX_gcc42_DMALLOC  Makefile_Linux  Makefile_MINGW  Makefile_OSX  Makefile_OSX_gcc42  Makefile_OSX_gcc42_DMALLOC  README  README.html  cbf.h  cbf_PARSER.simple  cbf_ascii.c  cbf_binary.h  cbf_canonical.c  cbf_codes.c  cbf_compress.c  cbf_compress.h  cbf_context.c  cbf_decode.c  cbf_definition_rev.txt  cbf_file.c  cbf_packed.h  cbf_part.c  cbf_part.h  cbf_tree.c  cbf_unixos.c  cbfext98.dic  common.h  (+3 more)
CBFlib/dREL-ply-0.5/: TestDrel.py  parser.out
CBFlib/doc/: .symlinks  .undosymlinks  CBFLIB.ps  CBFLIB.rtf  CBFlib.html  CBFlib.ps  CBFlib.rtf  CBFlib.txt  CBFlib_NOTICES.html  CBFlib_NOTICES.txt  Carray_data.html  Carray_element_size.html  Carray_intensities.html  Carray_structure.html  Carray_structure_list.html  Caxis.html  Cdiffrn_detector_axis.html  Cdiffrn_detector_element.html  Cdiffrn_frame_data.html  Cdiffrn_measurement.html  Cdiffrn_measurement_axis.html  Cdiffrn_radiation.html  Cdiffrn_refln.html  Cdiffrn_scan.html  Cdiffrn_scan_axis.html  Cdiffrn_scan_frame.html  Cdiffrn_scan_frame_axis.html  ChangeLog  ChangeLog.html  Cmap.html  Cmap_segment.html  Dcategorygroups.html  Dhistory.html  Dtypecodes.html  Dunitcodes.html  Iarray_data.array_id.html  Iarray_data.data.html  Iarray_element_size.array_id.html  Iarray_element_size.index.html  Iarray_intensities.array_id.html  (+100 more)
CBFlib/drel-ply/: drel-gu.py
CBFlib/examples/: adscimg2cbf.c  adscimg2cbf_sub.c  arvai_test.c  cbf2adscimg_sub.c  cbf2nexus.c  cbf_tail.c  cif2c.c  cif2cbf.c  convert_image.c  convert_minicbf.c  img.c  img.h  img2cif.c  makecbf.c  nexus2cbf.c  template_adscquantum315_3072x3072.cbf  template_adscquantum4_2304x2304.cbf  testcbf.c  testcbf.java  testcell.C  testcell.cmake  testflat.c  testhdf5.c  testreals.c  tiff2cbf.c
CBFlib/getopt-1.1.4_cbf/: lib
CBFlib/include/: cbf.h  cbf_alloc.h  cbf_ascii.h  cbf_binary.h  cbf_byte_offset.h  cbf_canonical.h  cbf_codes.h  cbf_compress.h  cbf_context.h  cbf_file.h  cbf_getopt.h  cbf_hdf5.h  cbf_lex.h  cbf_packed.h  cbf_predictor.h  cbf_read_binary.h  cbf_read_mime.h  cbf_simple.h  cbf_string.h  cbf_stx.h  cbf_tree.h  cbf_uncompressed.h  cbf_write.h  cbf_write_binary.h
CBFlib/m4/: Makefile.m4  fcb_read_xds_i2.m4  setup_py.m4
CBFlib/minicbf_test/: config
CBFlib/pycbf/: cbfgenericwrappers.i  cbfhandlewrappers.i  make_pycbf.py  pycbf.dvi  pycbf.i  pycbf.py  pycbf_wrap.c
CBFlib/src/: cbf.c  cbf.stx  cbf.stx.y  cbf_alloc.c  cbf_ascii.c  cbf_ascii.h  cbf_binary.c  cbf_byte_offset.c  cbf_canonical.c  cbf_canonical.h  cbf_codes.c  cbf_compress.c  cbf_compress.h  cbf_context.c  cbf_file.c  cbf_getopt.c  cbf_hdf5.c  cbf_lex.c  cbf_packed.c  cbf_packed.h  cbf_predictor.c  cbf_read_binary.c  cbf_read_mime.c  cbf_simple.c  cbf_string.c  cbf_stx.c  cbf_tree.c  cbf_tree.h  cbf_uncompressed.c  cbf_write.c  cbf_write_binary.c  drel_yacc.py  fcb_ci_strncmparr.f90  global.h  makecbf.c
CBFlib/templates/: cbf_test_orig.out
CBFlib_bleeding_edge/: .symlinks  .undosymlinks  CMakeLists.txt  Java.txt  Makefile  Makefile_AIX  Makefile_IRIX_gcc  Makefile_LINUX  Makefile_LINUX_64  Makefile_LINUX_DMALLOC  Makefile_LINUX_gcc42  Makefile_LINUX_gcc42_DMALLOC  Makefile_MINGW  Makefile_MSYS  Makefile_MSYS2  Makefile_OSX  Makefile_OSX_gcc42  Makefile_OSX_gcc42_DMALLOC  README  README.html  h5dump.cmake  oMakefile
CBFlib_bleeding_edge/PyCifRW-3.3_6Dec09/: CifFile.py  README  RELEASENOTES  setup.py
CBFlib_bleeding_edge/dREL-ply-0.5/: PKG-INFO  README
CBFlib_bleeding_edge/doc/: .symlinks  .undosymlinks  CBFlib.html  CBFlib.txt  Carray_structure_list.html  Cdiffrn_data_frame.html  Cdiffrn_frame_data.html  Cdiffrn_scan_axis.html  ChangeLog  ChangeLog.html  Dcategorygroups.html  Iarray_data.binary_id.html  Iarray_intensities.linearity.html  Iarray_intensities.undefined_value.html  Iarray_structure_list.axis_set_id.html  Iarray_structure_list.dimension.html  Iarray_structure_list.direction.html  Iarray_structure_list.index.html  Iarray_structure_list_axis.axis_id.html  Iarray_structure_list_axis.displacement.html  Iaxis.id.html  Iaxis.vector[1].html  Idiffrn_data_frame.array_id.html  Idiffrn_data_frame.center_fast.html  Idiffrn_data_frame.center_units.html  Idiffrn_detector.detector.html  Idiffrn_detector.dtime.html  Idiffrn_detector_element.reference_center_slow.html  Idiffrn_measurement.number_of_axes.html  Idiffrn_measurement.specimen_support.html  Idiffrn_radiation.polarizn_source_norm.html  Idiffrn_radiation.type.html  Idiffrn_scan.integration_time.html  Idiffrn_scan_axis.angle_increment.html  Idiffrn_scan_axis.angle_rstrt_incr.html  Idiffrn_scan_axis.displacement_range.html  Idiffrn_scan_axis.scan_id.html  Idiffrn_scan_frame.frame_number.html  Imap_segment.details.html  Imap_segment.id.html  (+14 more)
CBFlib_bleeding_edge/drel-ply/: drel-gu.py  gu.py  method_expression
CBFlib_bleeding_edge/examples/: adscimg2cbf.c  adscimg2cbf_sub.c  arvai_test.c  cbf2adscimg.c  cbf2adscimg_sub.c  cbf2nexus.c  cbf_standardize_numbers.c  cbf_tail.c  cbf_testxfelread.c  changtestcompression.c  cif2c.c  cif2cbf.c  convert_image.c  convert_minicbf.c  dps_peaksearch.c  dps_peaksearch.h  img.c  img.h  img2cif.c  (+18 more)
external_packages/: CMakeLists.txt
(+625 files in other folders)
